2003-01-30  Stephen Crawley <crawley@dstc.edu.au>
	* gnu/testlet/java/beans/PropertyDescriptorTest.java: new tests

2003-01-29  Stephen Crawley <crawley@dstc.edu.au>	
	* gnu/testlet/java/beans/DescriptorTest.java: fixed test cases to
	work under JDK1.3/1.4

2003-01-28  Stephen Crawley <crawley@dstc.edu.au>
	* gnu/testlet/java/math/BigDecimal/DiagBigDecimal.java (diaghashcode): 
	Removed invalid tests for BigDecimal.hashCode()
	* gnu/testlet/java/math/BigDecimal/DiagBigDecimal.java (diaglongvalue):
	Corrected some tests that accidentally used BigDecimal(double)
	on (double)(Long.MAX_VALUE)

2003-01-26  C. Brian Jones  <cbj@gnu.org>

	* gnu/testlet/java/io/RandomAccessFile/jdk11.java (test): localize
	use of 'int i' and modify two erroneous test checks for skipBytes()
	to one correct check.

2003-01-25  C. Brian Jones  <cbj@gnu.org>

	* gnu/testlet/java/io/RandomAccessFile/jdk11.java: reformatted only

2003-01-25  C. Brian Jones  <cbj@gnu.org>

	* gnu/testlet/java/text/CollationElementIterator/jdk11.java (test):
	adjusted results array based on a test run with Sun's JVM

2003-01-25  C. Brian Jones  <cbj@gnu.org>

	* gnu/testlet/java/text/CollationElementIterator: new directory
	* gnu/testlet/java/text/CollationElementIterator/jdk11.java: new tests

2003-01-24  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/io/ObjectInputOutput/OutputTest.java:
	Explicitly check for ObjectStreamExceptions and only compare
	contents when no such exceptions are thrown.

2003-01-25  Stephen Crawley <crawley@dstc.edu.au>
	* gnu/testlet/java/math/BigDecimal/DiagBigDecimal.java: fixed some
	error case tests to catch the correct exceptions, and only to 
	test the exception messages if CHECK_EXCEPTION_MESSAGES is true.

2003-01-24  Raif Naffah <raif@fl.net.au>
        * gnu/testlet/SimpleTestHarness.java (main): added a -file
	option as an alternative to stdin for reading selected test
	classes.

2003-01-21  Tom Tromey  <tromey@redhat.com>
