@@ -1,3 +1,13 @@
+2003-01-29  C. Brian Jones <cbj@gnu.org>
+
+	* gnu/testlet/java/net/Socket/SocketTest.java (test_params): 
+	moved test of setSocketImplFactory to separate file since if 
+	can affect subsequent attempts to create new Sockets
+	(test_BasicServer): remove invalid test expecting an exception
+	that should never be thrown and dependency on echo server
+	* gnu/testlet/java/net/Socket/TestSocketImplFactory.java: new file
+	* gnu/testlet/java/net/Socket/setSocketImplFactory.java: new test
+
 2003-01-30  Stephen Crawley <crawley@dstc.edu.au>
 	* gnu/testlet/java/beans/PropertyDescriptorTest.java: new tests
 
